<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/hotairballoon_24px"
        android:title="@string/hotspot" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_24px"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_travel"
        android:icon="@drawable/travel_24px"
        android:title="@string/travel" />
    <item
        android:id="@+id/navigation_gmap"
        android:icon="@drawable/gmap_24px"
        android:title="@string/gmap" />
    <item
        android:id="@+id/navigation_member"
        android:icon="@drawable/member_24px"
        android:title="@string/member" />
</menu>
