<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appiii.ui.Hot.FrgHot"
        android:label="hotspot"
        tools:layout="@layout/frg_hot" />
    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.appiii.ui.Search.FrgSearch"
        android:label="@string/search"
        tools:layout="@layout/frg_search" />

    <fragment
        android:id="@+id/navigation_travel"
        android:name="com.example.appiii.ui.Travel.FrgTravel"
        android:label="@string/travel"
        tools:layout="@layout/frg_travel" />
    <fragment
        android:id="@+id/navigation_gmap"
        android:name="com.example.appiii.ui.Gmap.FrgGmap"
        android:label="@string/gmap"
        tools:layout="@layout/frg_gmap" />
    <fragment
        android:id="@+id/navigation_member"
        android:name="com.example.appiii.ui.Member.FrgmMember"
        android:label="@string/member"
        tools:layout="@layout/frg_member" />
</navigation>
